Modifying the Padding to ensure everything works smoothly on IE, it’s not too visually different.

--- a/src/styles/modules/_sticky-nav.scss
+++ b/src/styles/modules/_sticky-nav.scss
@@ -82,7 +82,7 @@
     justify-content: center;
     line-height: 1.1em;
     min-height: 62px;
-    padding: 10px 20px;
+    padding: 10px 9px;
     text-align: center;
     text-decoration: none;
     width: 100%;
